Added my View for List of objects in my Entities and their views("Index")

--- a/RecordsSystem.PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/RecordsSystem.PresentationLayer/Views/Shared/_Layout.cshtml
@@ -23,6 +23,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RecUserDetail" asp-action="Index">RecordUser</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeDetail" asp-action="Index">Employee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CompamnyDetail" asp-action="Index">Company</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AddressDetail" asp-action="Index">Address</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
