--- a/RecordsSystem.PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/RecordsSystem.PresentationLayer/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeDetail" asp-action="Index">Employee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CompamnyDetail" asp-action="Index">Company</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CompanyDetail" asp-action="Index">Company</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AddressDetail" asp-action="Index">Address</a>
